<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/id"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_margin="3dp"
        android:background="#e2e2e2"
        android:orientation="horizontal" >

        <TextView
            style="@style/textFont"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:text="@string/title_exchange_surplus" />

        <TextView
            android:id="@+id/surplus"
            style="@style/textFont"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:text="@string/exchange_alipay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_margin="3dp"
        android:background="#e2e2e2"
        android:orientation="horizontal" >

        <TextView
            style="@style/textFont"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:text="@string/title_exchange_type" />

        <Spinner
            android:id="@+id/type"
            style="@style/textFont"
            android:layout_width="match_parent"
            android:layout_height="50dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_margin="3dp"
        android:background="#e2e2e2"
        android:orientation="horizontal" >

        <TextView
            style="@style/textFont"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:text="@string/title_exchange" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_margin="3dp"
        android:background="#e2e2e2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:text="@string/exchange_submit" >
        </Button>
    </LinearLayout>

</LinearLayout>